--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Restaurant Name</title>
+  <title>MY KITCHEN</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Rasturant Name</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">MY KITCHEN</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,8 +52,8 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Welcome to Rastaurant Name</h1>
-      <p class="lead">Tag-line Tag-line Tag-line Tag-line Tag-line Tag-line </p>
+      <h1>Welcome to MY KITCHEN</h1>
+      <p class="lead">For a tasty bite in every byte</p>
     </div>
   </header>
 
@@ -66,12 +66,6 @@
           <p class="lead">The best restaurant websites have one thing in common; beautiful presentation. An attractive
             design with excellent imagery can bring you many customers. Usability is important. But it’s the
             mouth-watering visuals that make these sites great.</p>
-          <ul>
-            <li>Clickable nav links that smooth scroll to page sections</li>
-            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-          </ul>
         </div>
       </div>
     </div>
@@ -132,31 +126,6 @@
             <div class="col-lg-3 col-md-4 col-6">
               <a href="#" class="d-block mb-4 h-100">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="">
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="">
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/8mUEy0ABdNE/400x300" alt="">
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/G9Rfc1qccH4/400x300" alt="">
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aJeH0KcFkuc/400x300" alt="">
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300" alt="">
               </a>
             </div>
           </div>
