Added images location

--- a/index.html
+++ b/index.html
@@ -95,20 +95,20 @@
 
             <div class="col-lg-3 col-md-4 col-6">
               <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="">
+                <img class="img-fluid img-thumbnail" src="images/poster1.png" alt="">
               </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
               <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="">
+                <img class="img-fluid img-thumbnail" src="images/poster2.png" alt="">
               </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
               <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="">
+                <img class="img-fluid img-thumbnail" src="images/poster3.png" alt="">
               </a>
             </div>
-            <div class="col-lg-3 col-md-4 col-6">
+            <!--<div class="col-lg-3 col-md-4 col-6">
               <a href="#" class="d-block mb-4 h-100">
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="">
               </a>
@@ -128,7 +128,7 @@
                 <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="">
               </a>
             </div>
-          </div>
+          </div>-->
 
         </div>
       </div>
