--- a/index.html
+++ b/index.html
@@ -141,9 +141,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>Contact us</h2>
           <hr class="mt-1 mb-4 bg-light">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor,
-            provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa
-            exercitationem, in, quo totam.</p>
+          <p class="lead">#508/1, Veene sheshanna Road, K R mohalla, Mysore 24</p>
         </div>
       </div>
     </div>
