--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <!-- Footer -->
   <footer class="py-2 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 2019</p>
     </div>
     <!-- /.container -->
   </footer>
