Register now marquee added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
       <p class="lead">For a tasty bite in every byte</p>
     </div>
   </header>
-
+<div class="bg-primary text-white px-5">
+  <marquee>
+    <a href="form.html" class="text-light">For Offers Register Now</a>
+  </marquee>
+</div>
   <section id="about">
     <div class="container">
       <div class="row">
