--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
           <div class="row text-center text-lg-left">
 
             <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
+              <a class="d-block mb-4 h-100">
                 <img class="img-fluid img-thumbnail" src="images/poster1.png" alt="">
               </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
+              <a class="d-block mb-4 h-100">
                 <img class="img-fluid img-thumbnail" src="images/poster2.jpg" alt="">
               </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
-              <a href="#" class="d-block mb-4 h-100">
+              <a class="d-block mb-4 h-100">
                 <img class="img-fluid img-thumbnail" src="images/poster3.png" alt="">
               </a>
             </div>
