--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">MY KITCHEN</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -43,20 +43,20 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger border border-light rounded px-3 py-1 mt-1 btn btn-primary ml-2 text-light" href="form.html">Register for Offer</a>
+            <a class="nav-link js-scroll-trigger border border-light rounded px-3 py-1 mt-1 btn btn-success ml-2 text-light" href="form.html">Register for Offer</a>
           </li>  
         </ul>
       </div>
     </div>
   </nav>
 
-  <header class="bg-primary text-white">
+  <header class="bg-success text-white">
     <div class="container text-center">
       <h1>Welcome to MY KITCHEN</h1>
       <p class="lead">For a tasty bite in every byte</p>
     </div>
   </header>
-<div class="bg-primary text-white px-5">
+<div class="bg-success text-white px-5">
   <marquee>
     <a href="form.html" class="text-light">For Offers Register Now</a>
   </marquee>
@@ -75,7 +75,7 @@
     </div>
   </section>
 
-  <section id="services" class="bg-primary text-white">
+  <section id="services" class="bg-success text-white">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -139,7 +139,7 @@
     </div>
   </section>
 
-  <section id="contact" class="bg-primary text-white">
+  <section id="contact" class="bg-success text-white">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
