--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
 <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow sticky-top mb-4" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow sticky-top mb-4" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="index.html">MY KITCHEN</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
